perf(babelrc): transform to cherry-pick Lodash and Recompose

--- a/src/storybook/.babelrc
+++ b/src/storybook/.babelrc
@@ -9,6 +9,9 @@
 		"transform-react-jsx",
 		"add-module-exports",
 		"react-require",
+    ["lodash", {
+      "id": ["lodash", "recompose"]
+    }],
     ["transform-runtime", {
       "helpers": false,
       "polyfill": false,
