--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "process-bootstrap": "^1.0.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "svg-url-loader": "^1.1.0"
+    "svg-url-loader": "^1.1.0",
+    "why-did-you-update": "0.0.8"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
