feat(create): implement generator of packages

--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,14 @@
 {
-	"presets": [
-		"es2015",
-		"stage-0",
-		"bluebird"
-	],
-	"plugins": [
-		"transform-decorators-legacy",
-		"transform-react-jsx",
-		"add-module-exports",
-		"react-require"
-	]
+  "presets": [
+    "es2015",
+    "stage-0",
+    "bluebird"
+  ],
+  "plugins": [
+    "transform-decorators-legacy",
+    "transform-react-jsx",
+    "add-module-exports",
+    "react-require",
+    "lodash"
+  ]
 }
