--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "cool-trim": "^1.1.1",
+    "email-validator": "^1.0.7",
     "file-loader": "^0.9.0",
     "glob": "^7.0.6",
     "image-webpack-loader": "^3.1.0",
     "inquirer": "^2.0.0",
+    "inquirer-autocomplete-prompt": "^0.3.0",
     "loader-utils": "^0.2.15",
     "lodash": "^4.17.4",
     "open": "0.0.5",
