--- a/src/cli/create/templates/package.json
+++ b/src/cli/create/templates/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "<%= componentNameKebab %>",
+  "name": "<%= componentPackageName %>",
   "description": "<%= componentDescription %>",
   "version": "0.0.1",
   "main": "index.jsx.js",
