--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
   "homepage": "https://github.com/Travelab/scot4",
   "dependencies": {
     "@kadira/storybook": "^2.13.0",
+    "@webpack-blocks/babel6": "^0.3.0",
+    "@webpack-blocks/webpack2": "^0.4.0-rc.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-react-require": "^3.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-react-inline-elements": "^6.8.0",
     "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-bluebird": "^1.0.0",
@@ -43,6 +46,7 @@
     "email-validator": "^1.0.7",
     "file-loader": "^0.9.0",
     "glob": "^7.0.6",
+    "html-webpack-plugin": "^2.26.0",
     "image-webpack-loader": "^3.1.0",
     "inquirer": "^2.0.0",
     "inquirer-autocomplete-prompt": "^0.3.0",
@@ -53,14 +57,15 @@
     "process-bootstrap": "^1.0.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "rimraf": "^2.5.4",
     "svg-url-loader": "^1.1.0",
+    "webpack-dashboard": "^0.2.1",
     "why-did-you-update": "0.0.8",
     "yeoman-environment": "^1.6.6",
     "yeoman-generator": "^1.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
-    "rimraf": "^2.5.4",
     "semantic-release": "^6.3.2"
   }
 }
