--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "cool-trim": "^1.1.1",
+    "css-loader": "^0.26.1",
     "email-validator": "^1.0.7",
     "file-loader": "^0.9.0",
     "glob": "^7.0.6",
@@ -58,7 +59,9 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "rimraf": "^2.5.4",
+    "spa-http-server": "^0.9.0",
     "svg-url-loader": "^1.1.0",
+    "webpack": "^2.2.0",
     "webpack-dashboard": "^0.2.1",
     "why-did-you-update": "0.0.8",
     "yeoman-environment": "^1.6.6",
