--- a/src/cli/create/templates/package.json
+++ b/src/cli/create/templates/package.json
@@ -5,5 +5,6 @@
   "main": "index.jsx.js",
   "author": "<%- author %>",
   "private": true,
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "dependencies": {}
 }
