--- a/src/cli/create/templates/package.json
+++ b/src/cli/create/templates/package.json
@@ -4,7 +4,10 @@
   "version": "0.0.1",
   "main": "index.jsx.js",
   "author": "<%- author %>",
-  "private": true,
   "license": "UNLICENSED",
-  "dependencies": {}
+  "browser": true,
+  "private": false,
+  "dependencies": {},
+  "peerDependencies": {},
+  "optionalDependencies": {}
 }
