--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
-    "semantic-release": "^6.3.2"
+    "semantic-release": "^6.3.2",
+    "write-pkg": "^2.0.0"
   }
 }
