--- a/package.json
+++ b/package.json
@@ -68,7 +68,9 @@
     "yeoman-generator": "^1.0.1"
   },
   "devDependencies": {
+    "@knit/knit": "^0.2.0",
     "babel-cli": "^6.18.0",
+    "listr": "^0.11.0",
     "semantic-release": "^6.3.2",
     "write-pkg": "^2.0.0"
   }
