--- a/package.json
+++ b/package.json
@@ -65,13 +65,14 @@
     "webpack": "^2.2.0",
     "webpack-dashboard": "^0.3.0",
     "yeoman-environment": "^1.6.6",
-    "yeoman-generator": "^1.0.1"
-  },
-  "devDependencies": {
+    "yeoman-generator": "^1.0.1",
+    "write-pkg": "^2.0.0",
     "@knit/knit": "^0.2.0",
     "babel-cli": "^6.18.0",
-    "listr": "^0.11.0",
+    "listr": "^0.11.0"
+  },
+  "devDependencies": {
     "semantic-release": "^6.3.2",
-    "write-pkg": "^2.0.0"
+    
   }
 }
