--- a/package.json
+++ b/package.json
@@ -72,7 +72,6 @@
     "listr": "^0.11.0"
   },
   "devDependencies": {
-    "semantic-release": "^6.3.2",
-    
+    "semantic-release": "^6.3.2"
   }
 }
