fix(knit): fix loader exclude path

--- a/package.json
+++ b/package.json
@@ -73,5 +73,12 @@
   },
   "devDependencies": {
     "semantic-release": "^6.3.2"
+  },
+  "knit": {
+    "needle": {
+      "paths": {
+        "modulesStub": "modules"
+      }
+    }
   }
 }
