refactor(knit): change namespace and update example

--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
   "knit": {
     "needle": {
       "paths": {
-        "modulesStub": "modules"
+        "modulesStub": "packages"
       }
     }
   }
