--- a/src/cli/create/templates/package.json
+++ b/src/cli/create/templates/package.json
@@ -2,7 +2,7 @@
   "name": "<%= componentPackageName %>",
   "description": "<%= componentDescription %>",
   "version": "0.0.1",
-  "main": "index.jsx.js",
+  "main": "index.js",
   "author": "<%- author %>",
   "license": "UNLICENSED",
   "browser": true,
