--- a/package.json
+++ b/package.json
@@ -26,19 +26,24 @@
   },
   "homepage": "https://github.com/Travelab/scot4",
   "dependencies": {
-    "@kadira/storybook": "^2.13.0",
+    "@kadira/storybook": "https://github.com/Travelab/react-storybook.git",
+    "@knit/knit": "^0.2.0",
     "@webpack-blocks/babel6": "^0.4.0",
     "@webpack-blocks/extract-text2": "^0.4.0-rc",
     "@webpack-blocks/webpack2": "^0.4.0-rc.2",
+    "babel-cli": "^6.18.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-object-rest-spread": "^0.0.0",
     "babel-plugin-react-require": "^3.0.0",
+    "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-inline-elements": "^6.8.0",
     "babel-plugin-transform-react-jsx": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-bluebird": "^1.0.0",
     "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.5.0",
     "bluebird": "^3.4.6",
     "chalk": "^1.1.3",
@@ -52,6 +57,7 @@
     "image-webpack-loader": "^3.1.0",
     "inquirer": "^3.0.1",
     "inquirer-autocomplete-prompt": "^0.8.0",
+    "listr": "^0.11.0",
     "loader-utils": "^1.0.0",
     "lodash": "^4.17.4",
     "open": "0.0.5",
@@ -64,12 +70,9 @@
     "svg-url-loader": "^2.0.1",
     "webpack": "^2.2.0",
     "webpack-dashboard": "^0.3.0",
-    "yeoman-environment": "^1.6.6",
-    "yeoman-generator": "^1.0.1",
     "write-pkg": "^2.0.0",
-    "@knit/knit": "^0.2.0",
-    "babel-cli": "^6.18.0",
-    "listr": "^0.11.0"
+    "yeoman-environment": "^1.6.6",
+    "yeoman-generator": "^1.0.1"
   },
   "devDependencies": {
     "semantic-release": "^6.3.2"
