--- a/package.json
+++ b/package.json
@@ -28,29 +28,19 @@
   "dependencies": {
     "@kadira/storybook": "https://github.com/Travelab/react-storybook.git",
     "@knit/knit": "^0.2.0",
-    "@webpack-blocks/babel6": "^0.4.0",
-    "@webpack-blocks/extract-text2": "^0.4.0-rc",
-    "@webpack-blocks/webpack2": "^0.4.0-rc.2",
     "babel-cli": "^6.18.0",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-lodash": "^3.2.11",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.4.0",
     "babel-plugin-object-rest-spread": "^0.0.0",
-    "babel-plugin-react-require": "^3.0.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-react-inline-elements": "^6.8.0",
-    "babel-plugin-transform-react-jsx": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-bluebird": "^1.0.0",
-    "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-0": "^6.5.0",
     "bluebird": "^3.4.6",
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "cool-trim": "^1.1.1",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.27.0",
     "email-validator": "^1.0.7",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.0",
     "glob": "^7.0.6",
     "html-webpack-plugin": "^2.26.0",
@@ -75,6 +65,10 @@
     "yeoman-generator": "^1.0.1"
   },
   "devDependencies": {
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-bluebird": "^1.0.0",
+    "babel-preset-es2015": "^6.14.0",
     "semantic-release": "^6.3.2"
   },
   "knit": {
