--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "email-validator": "^1.0.7",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.0",
+    "fusebox": "^1.3.123",
     "glob": "^7.0.6",
+    "happypack": "^3.0.3",
     "html-webpack-plugin": "^2.26.0",
     "image-webpack-loader": "^3.1.0",
     "inquirer": "^3.0.1",
