feat(fuesbox): add build with fuse-box

--- a/package.json
+++ b/package.json
@@ -33,12 +33,15 @@
     "babel-loader": "^6.4.0",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-react-require": "^3.0.0",
+    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-plugin-transform-node-env-inline": "^0.0.2",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.23.0",
     "babel-runtime": "^6.23.0",
+    "base64-img": "^1.0.3",
     "bluebird": "^3.4.6",
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
@@ -47,7 +50,7 @@
     "email-validator": "^1.0.7",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.0",
-    "fusebox": "^1.3.123",
+    "fuse-box": "^1.3.127",
     "glob": "^7.0.6",
     "happypack": "^3.0.3",
     "html-webpack-plugin": "^2.26.0",
