--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "cool-trim": "^1.1.1",
     "css-loader": "^0.27.0",
     "email-validator": "^1.0.7",
+    "eslint": "^3.18.0",
+    "eslint-config-tl3": "https://github.com/Travelab/eslint-plugin-tl3",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.0",
     "fusebox": "^1.3.123",
