--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-bluebird": "^1.0.1",
+    "babel-preset-env": "^1.3.2",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-runtime": "^6.23.0",
@@ -102,6 +103,7 @@
     "normalize.css": "^6.0.0",
     "qs": "^6.4.0",
     "react-addons-create-fragment": "^15.4.2",
+    "react-addons-css-transition-group": "^15.4.2",
     "react-container-query": "^0.9.0",
     "react-day-picker": "^5.2.0",
     "react-inlinesvg": "^0.5.5",
@@ -116,6 +118,7 @@
     "recompose": "^0.22.0",
     "redux": "^3.6.0",
     "redux-saga": "^0.14.4",
+    "scroll-into-view": "^1.7.6",
     "semantic-release": "^6.3.2",
     "superagent": "^3.5.2",
     "timezone": "^1.0.6"
