--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-loader": "^1.7.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
+    "friendly-errors-webpack-plugin": "^1.6.1",
     "fusebox": "^1.3.123",
     "glob": "^7.1.1",
     "happypack": "^3.0.3",
