--- a/package.json
+++ b/package.json
@@ -51,12 +51,11 @@
     "eslint-config-tl3": "https://github.com/Travelab/eslint-plugin-tl3",
     "eslint-friendly-formatter": "^2.0.7",
     "eslint-loader": "^1.7.1",
+    "express": "^4.15.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
-    "fusebox": "^1.3.123",
     "glob": "^7.1.1",
-    "happypack": "^3.0.3",
     "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.3.0",
     "inquirer": "^3.0.6",
