--- a/package.json
+++ b/package.json
@@ -45,15 +45,16 @@
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "cool-trim": "^1.1.1",
-    "css-loader": "^0.27.3",
+    "css-loader": "^0.28.0",
     "email-validator": "^1.0.7",
-    "eslint": "^3.18.0",
+    "eslint": "^3.19.0",
     "eslint-config-tl3": "https://github.com/Travelab/eslint-plugin-tl3",
     "eslint-friendly-formatter": "^2.0.7",
     "eslint-loader": "^1.7.1",
+    "eslint-nibble": "https://github.com/Travelab/eslint-nibble.git",
     "express": "^4.15.2",
     "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.10.1",
+    "file-loader": "^0.11.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "glob": "^7.1.1",
     "html-webpack-plugin": "^2.28.0",
