--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-runtime": "^6.23.0",
+    "base64-inline-loader": "^1.1.0",
     "bluebird": "^3.5.0",
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
