--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "eslint-nibble": "https://github.com/Travelab/eslint-nibble.git",
     "express": "^4.15.2",
     "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.0",
+    "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "glob": "^7.1.1",
     "html-webpack-plugin": "^2.28.0",
@@ -75,8 +75,9 @@
     "spa-http-server": "^0.9.0",
     "svg-url-loader": "^2.0.2",
     "watch-ignore-webpack-plugin": "^1.0.0",
-    "webpack": "^2.3.2",
+    "webpack": "^2.3.3",
     "webpack-dashboard": "^0.3.0",
+    "webpack-merge": "^4.1.0",
     "webpack-parallel-uglify-plugin": "^0.4.1",
     "write-pkg": "^2.1.0",
     "yeoman-environment": "^1.6.6",
@@ -101,7 +102,7 @@
     "jss-props-sort": "^3.0.0",
     "jss-vendor-prefixer": "^4.0.0",
     "lodash": "^4.17.4",
-    "mousetrap": "^1.6.0",
+    "mousetrap": "^1.6.1",
     "normalize.css": "^6.0.0",
     "qs": "^6.4.0",
     "react-addons-create-fragment": "^15.4.2",
@@ -109,7 +110,7 @@
     "react-container-query": "^0.9.0",
     "react-day-picker": "^5.2.0",
     "react-inlinesvg": "^0.5.5",
-    "react-jss": "^5.4.0",
+    "react-jss": "^5.4.1",
     "react-motion": "^0.4.7",
     "react-progress-bar-plus": "^1.2.0",
     "react-redux": "^5.0.3",
@@ -120,7 +121,7 @@
     "recompose": "^0.22.0",
     "redux": "^3.6.0",
     "redux-saga": "^0.14.4",
-    "scroll-into-view": "^1.7.6",
+    "scroll-into-view": "^1.8.0",
     "semantic-release": "^6.3.2",
     "superagent": "^3.5.2",
     "timezone": "^1.0.6"
