--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@knit/knit": "^0.2.0",
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
+    "babel-loader": "v7.0.0-beta.1",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-react-require": "^3.0.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
@@ -69,6 +69,7 @@
     "open": "0.0.5",
     "portfinder": "^1.0.13",
     "process-bootstrap": "^1.0.0",
+    "progress-bar-webpack-plugin": "^1.9.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "rimraf": "^2.6.1",
