--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "homepage": "https://github.com/Travelab/scot4",
   "dependencies": {
-    "@kadira/storybook": "file:../react-storybook/",
+    "@kadira/storybook": "https://github.com/Travelab/react-storybook.git",
     "@knit/knit": "^0.2.0",
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
