--- a/package.json
+++ b/package.json
@@ -128,8 +128,7 @@
     "scroll-into-view": "^1.8.0",
     "semantic-release": "^6.3.2",
     "superagent": "^3.5.2",
-    "timezone": "^1.0.6",
-    "vorpal": "^1.11.4"
+    "timezone": "^1.0.6"
   },
   "knit": {
     "needle": {
