--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "@kadira/storybook": "https://github.com/Travelab/react-storybook.git",
     "@knit/knit": "^0.2.0",
-    "babel-cli": "^6.24.0",
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.24.0",
     "babel-loader": "v7.0.0-beta.1",
     "babel-plugin-lodash": "^3.2.11",
@@ -44,6 +44,7 @@
     "babel-runtime": "^6.23.0",
     "base64-inline-loader": "^1.1.0",
     "bluebird": "^3.5.0",
+    "caporal": "^0.4.1",
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "cool-trim": "^1.1.1",
@@ -81,6 +82,8 @@
     "watch-ignore-webpack-plugin": "^1.0.0",
     "webpack": "^2.3.3",
     "webpack-dashboard": "^0.3.0",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0",
     "webpack-parallel-uglify-plugin": "^0.4.1",
     "write-pkg": "^2.1.0",
@@ -143,5 +146,8 @@
     "plugins": {
       "precss": {}
     }
+  },
+  "eslintConfig": {
+    "extends": "tl3"
   }
 }
