--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "progress-bar-webpack-plugin": "^1.9.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-hot-loader": "next",
     "rimraf": "^2.6.1",
     "spa-http-server": "^0.9.0",
     "sugarss": "^0.2.0",
