--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "glob": "^7.1.1",
+    "html-webpack-harddisk-plugin": "^0.1.0",
     "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.3.0",
     "inquirer": "^3.0.6",
