--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "svg-url-loader": "^2.0.2",
     "watch-ignore-webpack-plugin": "^1.0.0",
     "webpack": "^2.3.3",
+    "webpack-archive-plugin": "^3.0.0",
     "webpack-dashboard": "^0.3.0",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.18.0",
