--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "glob": "^7.1.1",
-    "html-webpack-harddisk-plugin": "^0.1.0",
     "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.3.0",
     "inquirer": "^3.0.6",
@@ -72,6 +71,7 @@
     "loader-utils": "^1.1.0",
     "lodash": "^4.17.4",
     "lodash-es": "^4.17.4",
+    "null-loader": "^0.1.1",
     "open": "0.0.5",
     "portfinder": "^1.0.13",
     "precss": "^1.4.0",
