--- a/package.json
+++ b/package.json
@@ -31,22 +31,22 @@
     "@kadira/storybook": "https://github.com/Travelab/react-storybook.git",
     "@knit/knit": "^0.2.0",
     "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.0",
-    "babel-loader": "v7.0.0-beta.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "v7.0.0",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-prejss": "^0.0.5",
     "babel-plugin-react-require": "^3.0.0",
-    "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-bluebird": "^1.0.1",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.23.0",
     "base64-inline-loader": "^1.1.0",
     "bluebird": "^3.5.0",
-    "caporal": "^0.4.1",
+    "caporal": "^0.5.0",
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "connect-history-api-fallback": "^1.3.0",
@@ -77,22 +77,22 @@
     "precss": "^1.4.0",
     "process-bootstrap": "^1.0.0",
     "progress-bar-webpack-plugin": "^1.9.3",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "react-hot-loader": "next",
     "rimraf": "^2.6.1",
     "spa-http-server": "^0.9.0",
     "sugarss": "^0.2.0",
     "svg-url-loader": "^2.0.2",
     "watch-ignore-webpack-plugin": "^1.0.0",
-    "webpack": "^2.3.3",
+    "webpack": "^2.4.1",
     "webpack-archive-plugin": "^3.0.0",
     "webpack-dashboard": "^0.3.0",
-    "webpack-dev-middleware": "^1.10.1",
+    "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0",
     "webpack-parallel-uglify-plugin": "^0.4.1",
-    "write-pkg": "^2.1.0",
+    "write-pkg": "^3.0.1",
     "yeoman-environment": "^1.6.6",
     "yeoman-generator": "^1.1.1"
   },
@@ -101,39 +101,39 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "blueimp-md5": "^2.7.0",
     "classnames": "^2.2.5",
-    "google-map-react": "^0.23.0",
+    "google-map-react": "^0.24.0",
     "hammer-timejs": "^1.1.0",
     "intl": "^1.2.5",
     "intl-messageformat": "^1.3.0",
-    "jss": "^6.5.0",
-    "jss-camel-case": "^3.0.0",
-    "jss-default-unit": "^5.0.3",
-    "jss-expand": "^2.1.0",
-    "jss-extend": "^3.0.1",
-    "jss-global": "^0.4.1",
-    "jss-nested": "^3.0.1",
-    "jss-props-sort": "^3.0.0",
-    "jss-vendor-prefixer": "^4.0.0",
+    "jss": "^7.1.0",
+    "jss-camel-case": "^4.0.0",
+    "jss-default-unit": "^6.1.1",
+    "jss-expand": "^3.0.1",
+    "jss-extend": "^4.0.1",
+    "jss-global": "^1.0.1",
+    "jss-nested": "^4.0.1",
+    "jss-props-sort": "^4.0.0",
+    "jss-vendor-prefixer": "^5.1.0",
     "lodash": "^4.17.4",
     "mousetrap": "^1.6.1",
     "normalize.css": "^6.0.0",
     "qs": "^6.4.0",
-    "react-addons-create-fragment": "^15.4.2",
-    "react-addons-css-transition-group": "^15.4.2",
+    "react-addons-create-fragment": "^15.5.3",
+    "react-addons-css-transition-group": "^15.5.2",
     "react-container-query": "^0.9.0",
-    "react-day-picker": "^5.2.0",
+    "react-day-picker": "^5.2.3",
     "react-inlinesvg": "^0.5.5",
-    "react-jss": "^5.4.1",
-    "react-motion": "^0.4.7",
+    "react-jss": "^6.1.1",
+    "react-motion": "^0.4.8",
     "react-progress-bar-plus": "^1.2.0",
-    "react-redux": "^5.0.3",
-    "react-sticky": "^5.0.5",
-    "react-swipe": "^5.0.6",
+    "react-redux": "^5.0.4",
+    "react-sticky": "^5.0.8",
+    "react-swipe": "^5.0.7",
     "react-swipeable": "^3.9.2",
-    "react-tooltip": "^3.2.10",
-    "recompose": "^0.22.0",
+    "react-tooltip": "^3.3.0",
+    "recompose": "^0.23.1",
     "redux": "^3.6.0",
-    "redux-saga": "^0.14.4",
+    "redux-saga": "^0.14.7",
     "scroll-into-view": "^1.8.0",
     "semantic-release": "^6.3.2",
     "superagent": "^3.5.2",
