fix(build): update style loader and remove views

--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "blueimp-md5": "^2.7.0",
     "classnames": "^2.2.5",
+    "convert-layout": "^0.4.1",
     "google-map-react": "^0.24.0",
     "hammer-timejs": "^1.1.0",
     "intl": "^1.2.5",
@@ -116,7 +117,9 @@
     "jss-vendor-prefixer": "^5.1.0",
     "lodash": "^4.17.4",
     "mousetrap": "^1.6.1",
+    "navigo": "^4.6.2",
     "normalize.css": "^6.0.0",
+    "popper.js": "^1.8.2",
     "qs": "^6.4.0",
     "react-addons-create-fragment": "^15.5.3",
     "react-addons-css-transition-group": "^15.5.2",
@@ -136,6 +139,7 @@
     "redux-saga": "^0.14.7",
     "scroll-into-view": "^1.8.0",
     "semantic-release": "^6.3.2",
+    "store": "^2.0.4",
     "superagent": "^3.5.2",
     "timezone": "^1.0.6"
   },
