--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "homepage": "https://github.com/Travelab/scot4",
   "dependencies": {
     "@kadira/storybook": "https://github.com/Travelab/react-storybook.git",
-    "@knit/knit": "^0.2.0",
+    "@knit/knit": "^0.4.1",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-loader": "v7.0.0",
@@ -42,6 +42,7 @@
     "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-react-optimize": "https://github.com/Travelab/babel-react-optimize",
     "babel-runtime": "^6.23.0",
     "base64-inline-loader": "^1.1.0",
     "bluebird": "^3.5.0",
@@ -51,11 +52,11 @@
     "connect-history-api-fallback": "^1.3.0",
     "cool-trim": "^1.1.1",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.1",
     "email-validator": "^1.0.7",
     "eslint": "^3.19.0",
     "eslint-config-tl3": "https://github.com/Travelab/eslint-plugin-tl3",
-    "eslint-friendly-formatter": "^2.0.7",
+    "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-nibble": "https://github.com/Travelab/eslint-nibble.git",
     "express": "^4.15.2",
@@ -64,10 +65,10 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "glob": "^7.1.1",
     "html-webpack-plugin": "^2.28.0",
-    "image-webpack-loader": "^3.3.0",
+    "image-webpack-loader": "^3.3.1",
     "inquirer": "^3.0.6",
     "inquirer-autocomplete-prompt": "^0.8.0",
-    "listr": "^0.11.0",
+    "listr": "^0.12.0",
     "loader-utils": "^1.1.0",
     "lodash": "^4.17.4",
     "lodash-es": "^4.17.4",
@@ -82,12 +83,12 @@
     "react-hot-loader": "next",
     "rimraf": "^2.6.1",
     "spa-http-server": "^0.9.0",
-    "sugarss": "^0.2.0",
+    "sugarss": "^1.0.0",
     "svg-url-loader": "^2.0.2",
     "watch-ignore-webpack-plugin": "^1.0.0",
-    "webpack": "^2.4.1",
+    "webpack": "^2.5.1",
     "webpack-archive-plugin": "^3.0.0",
-    "webpack-dashboard": "^0.3.0",
+    "webpack-dashboard": "^0.4.0",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0",
@@ -107,7 +108,7 @@
     "hammer-timejs": "^1.1.0",
     "intl": "^1.2.5",
     "intl-messageformat": "^1.3.0",
-    "jss": "^7.1.0",
+    "jss": "^7.1.2",
     "jss-camel-case": "^4.0.0",
     "jss-default-unit": "^6.1.1",
     "jss-expand": "^3.0.1",
@@ -118,28 +119,28 @@
     "jss-vendor-prefixer": "^5.1.0",
     "lodash": "^4.17.4",
     "mousetrap": "^1.6.1",
-    "navigo": "^4.6.2",
-    "normalize.css": "^6.0.0",
-    "popper.js": "^1.8.2",
+    "navigo": "^4.7.1",
+    "normalize.css": "^7.0.0",
+    "popper.js": "^1.9.4",
     "qs": "^6.4.0",
-    "react-addons-create-fragment": "^15.5.3",
+    "react-addons-create-fragment": "^15.5.4",
     "react-addons-css-transition-group": "^15.5.2",
-    "react-container-query": "^0.9.0",
-    "react-day-picker": "^5.2.3",
-    "react-inlinesvg": "^0.5.5",
+    "react-container-query": "^0.9.1",
+    "react-day-picker": "^5.5.1",
+    "react-inlinesvg": "^0.6.0",
     "react-jss": "^6.1.1",
-    "react-motion": "^0.4.8",
+    "react-motion": "^0.5.0",
     "react-progress-bar-plus": "^1.2.0",
     "react-redux": "^5.0.4",
-    "react-sticky": "^5.0.8",
-    "react-swipe": "^5.0.7",
-    "react-swipeable": "^3.9.2",
+    "react-sticky": "^6.0.1",
+    "react-swipe": "^5.0.8",
+    "react-swipeable": "^4.0.0",
     "react-tooltip": "^3.3.0",
-    "recompose": "^0.23.1",
+    "recompose": "^0.23.4",
     "redux": "^3.6.0",
-    "redux-saga": "^0.14.7",
+    "redux-saga": "^0.15.3",
     "scroll-into-view": "^1.8.0",
-    "semantic-release": "^6.3.2",
+    "semantic-release": "^6.3.6",
     "store": "^2.0.4",
     "superagent": "^3.5.2",
     "timezone": "^1.0.6"
