--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
     "babel-loader": "v7.0.0",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-react-require": "^3.0.0",
+    "babel-plugin-transform-async-to-bluebird": "^1.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-promise-to-bluebird": "^1.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-bluebird": "^1.0.1",
     "babel-preset-env": "^1.4.0",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.23.0",
     "base64-inline-loader": "^1.1.0",
@@ -81,6 +82,7 @@
     "react-hot-loader": "next",
     "rimraf": "^2.6.1",
     "spa-http-server": "^0.9.0",
+    "style-loader": "^0.18.0",
     "sugarss": "^1.0.0",
     "svg-url-loader": "^2.0.2",
     "watch-ignore-webpack-plugin": "^1.0.0",
