--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-bluebird": "^1.0.1",
     "babel-preset-env": "^1.4.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.23.0",
     "base64-inline-loader": "^1.1.0",
