feat(eslint): return tl3 config

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "email-validator": "^1.0.7",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
+    "eslint-config-tl3": "https://github.com/Travelab/eslint-plugin-tl3.git",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-nibble": "https://github.com/Travelab/eslint-nibble.git",
