--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-promise-to-bluebird": "^1.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-bluebird": "^1.0.1",
     "babel-preset-env": "^1.5.1",
     "babel-preset-react": "^6.24.1",
@@ -50,6 +51,7 @@
     "connect-history-api-fallback": "^1.3.0",
     "cool-trim": "^1.1.1",
     "copy-webpack-plugin": "^4.0.1",
+    "core-js": "^2.4.1",
     "css-loader": "^0.28.4",
     "email-validator": "^1.0.7",
     "eslint": "^3.19.0",
