--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/Travelab/scot4",
   "dependencies": {
     "@kadira/storybook": "https://github.com/Travelab/react-storybook.git",
+    "autoprefixer": "^7.1.1",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-loader": "v7.0.0",
@@ -52,6 +53,7 @@
     "cool-trim": "^1.1.1",
     "copy-webpack-plugin": "^4.0.1",
     "core-js": "^2.4.1",
+    "css-hot-loader": "^1.2.0",
     "css-loader": "^0.28.4",
     "email-validator": "^1.0.7",
     "eslint": "^3.19.0",
@@ -73,6 +75,8 @@
     "image-webpack-loader": "^3.3.1",
     "inquirer": "^3.0.6",
     "inquirer-autocomplete-prompt": "^0.8.0",
+    "jss": "^8.0.0",
+    "jss-preset-default": "^3.0.0",
     "listr": "^0.12.0",
     "loader-utils": "^1.1.0",
     "lodash": "^4.17.4",
@@ -80,9 +84,11 @@
     "null-loader": "^0.1.1",
     "open": "0.0.5",
     "portfinder": "^1.0.13",
+    "postcss-loader": "^2.0.6",
     "precss": "^1.4.0",
     "process-bootstrap": "^1.0.0",
     "progress-bar-webpack-plugin": "^1.9.3",
+    "raw-loader": "^0.5.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "next",
@@ -91,6 +97,7 @@
     "style-loader": "^0.18.1",
     "sugarss": "^1.0.0",
     "svg-url-loader": "^2.0.2",
+    "value-loader": "^0.1.3",
     "watch-ignore-webpack-plugin": "^1.0.0",
     "webpack": "^2.6.1",
     "webpack-archive-plugin": "^3.0.0",
@@ -114,15 +121,6 @@
     "hammer-timejs": "^1.1.0",
     "intl": "^1.2.5",
     "intl-messageformat": "^1.3.0",
-    "jss": "^7.1.5",
-    "jss-camel-case": "^4.0.0",
-    "jss-default-unit": "^6.1.2",
-    "jss-expand": "^3.0.1",
-    "jss-extend": "^4.0.1",
-    "jss-global": "^1.0.1",
-    "jss-nested": "^4.0.1",
-    "jss-props-sort": "^4.0.0",
-    "jss-vendor-prefixer": "^5.1.0",
     "lodash": "^4.17.4",
     "mousetrap": "^1.6.1",
     "navigo": "^5.0.2",
@@ -134,7 +132,6 @@
     "react-container-query": "^0.9.1",
     "react-day-picker": "^5.5.3",
     "react-inlinesvg": "^0.6.0",
-    "react-jss": "^6.1.1",
     "react-motion": "^0.5.0",
     "react-progress-bar-plus": "^1.2.0",
     "react-redux": "^5.0.5",
