--- a/package.json
+++ b/package.json
@@ -145,8 +145,7 @@
     "scroll-into-view": "^1.8.0",
     "semantic-release": "^6.3.6",
     "store": "^2.0.4",
-    "superagent": "^3.5.2",
-    "timezone": "^1.0.6"
+    "superagent": "^3.5.2"
   },
   "eslintConfig": {
     "extends": "standard"
